Try to fix z-index on iOS 2.

--- a/css/common.css
+++ b/css/common.css
@@ -1,4 +1,4 @@
-header {
+head {
     -webkit-transform: translate3d(0,0,0);
 }
 
